<resources>
    <string name="app_name">GoodsManager</string>
    <string name="setting">設定</string>
    <string name="manage">管理</string>
    <string name="purchase">進貨</string>
    <string name="type">類型</string>
    <string name="size_choose">選擇尺寸</string>
    <string name="flexible">彈性</string>
    <string name="size">尺寸</string>
    <string name="color">顏色</string>
    <string name="material">材質</string>
    <string name="goods_name">品名</string>
    <string name="numbers">編號</string>
    <string name="mall">商城</string>
    <string name="position">櫃位</string>
    <string name="list_price">定價</string>
    <string name="actual_price">連線</string>
    <string name="income_k">進Ｋ</string>
    <string name="income_t">進Ｔ</string>
    <string name="search">搜尋</string>
    <string name="none_select">未選擇</string>
    <string name="color_choose">選擇顏色</string>
    <string name="submit">送出</string>
    <string name="note">備註</string>
    <string name="append">追加數量</string>
    <string name="purchase_confirm_message">確認送出？</string>
    <string name="delete_confirm_message">確定要刪除?</string>
    <string name="confirm_yes">是</string>
    <string name="confirm_no">否</string>
    <string name="upload">上傳</string>
    <string name="delete">刪除</string>
    <string name="edit">編輯</string>
    <string name="po">Po文</string>
    <string name="size_detail">詳細尺寸</string>
    <string name="size_column_1">欄位1</string>
    <string name="size_column_2">欄位2</string>
    <string name="size_column_3">欄位3</string>
    <string name="size_column_4">欄位4</string>
    <string name="size_column_5">欄位5</string>
    <string name="size_column_6">欄位6</string>
    <string name="size_column_7">欄位7</string>
    <string name="size_column_8">欄位8</string>
    <string name="copy">複製</string>
    <string name="add">新增</string>
    <string name="confirm">確認</string>
    <string name="cancel">取消</string>
    <string name="exchange_rate">匯率</string>
    <string name="exchange_rate_dialog_title">更改匯率</string>
    <string name="normal">一般</string>
    <string name="code">代碼</string>
    <string name="clear">清除</string>
    <string name="purchase_clear_confirm">是否要清除所有欄位？</string>
    <string name="setting_reset_message">是否要重設所有設定?</string>
    <string name="date_select_title">日期天數設定</string>
    <string name="date">日期</string>
    <string name="day">天數</string>
    <string name="setting_once_a_day">一天顯示一次</string>
    <string name="setting_every_time">每次開啟顯示</string>
    <string name="post_text">&#060;3 9月官網連線新款相簿：https://bit.ly/2C69XrV\n&#060;3 9月連線優惠活動：https://bit.ly/2oCb21a\n&#060;3 9月直播抽獎活動：https://bit.ly/2oDdOTK </string>
    <string name="resume">恢復</string>
    <string name="post">Po文</string>

    <string-array name="flexible_array">
        <item>無</item>
        <item>些許</item>
        <item>有</item>
    </string-array>

</resources>
