<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/date_select_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/date_select_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorTextOnPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/date_select_title"/>

    <LinearLayout
        android:id="@+id/date_layout"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@color/colorObjectBackground"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/date"/>

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:textColor="@color/colorTextOnBackground"
            android:textStyle="bold"
            android:textSize="16sp"/>

    </LinearLayout>

    <View
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:background="@color/colorDivider"/>

    <LinearLayout
        android:id="@+id/day_layout"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@color/colorObjectBackground"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/day"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/day_decrease"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_remove_dark"/>

            <TextView
                android:id="@+id/day_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:textSize="20sp"
                android:textColor="@color/colorTextOnBackground"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/day_increase"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_add_dark" />

        </LinearLayout>

    </LinearLayout>

    <jcchen.goodsmanager.view.widget.RoundedImageView
        android:id="@+id/confirm_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="80dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_confirm"
        android:tint="@color/colorPrimary"/>

</LinearLayout>